--- a/templates/layouts/base/_core.twig
+++ b/templates/layouts/base/_core.twig
@@ -31,10 +31,12 @@
   {% do view.registerJsFile(craft.stamp.er('/assets/js/site.combined.min.js')) %}
   {% do view.registerJsFile('https://www.googletagmanager.com/gtag/js?id=UA-111364147-1') %}
   {% js %}
+  if(!(navigator.doNotTrack == "1" || window.doNotTrack == "1")) {
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
     gtag('config', 'UA-111364147-1');
+  }
   {% endjs %}
 
 {% endif %}
