--- a/templates/layouts/base/_core.twig
+++ b/templates/layouts/base/_core.twig
@@ -3,6 +3,7 @@
 <html lang="{{ craft.app.language |slice(0,2) }}" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
   <title>{% if title is defined %}{{ title }} - {% endif %}{{ siteName }}</title>
 
