--- a/src/styles/modules/_block-staff-member.styl
+++ b/src/styles/modules/_block-staff-member.styl
@@ -87,7 +87,8 @@
   > ul
     list-style none
     padding 0
-    
+  .block--staff-member
+    margin-bottom rem(28px)
   .block--staff-member a
     
     &:after
