--- a/src/styles/site/_html.styl
+++ b/src/styles/site/_html.styl
@@ -24,8 +24,10 @@ body,
   height: 100%
   box-shadow: 0 0 30px rgba(0,0,0,.5)
   transition: transform 0.5s
-  overflow-y: scroll
+  overflow-y scroll
+  overflow-x hidden
   background: $body-background-color
+  -webkit-overflow-scrolling: touch
   &::after
     position: absolute
     top: 0
