--- a/src/styles/site/_parallax.styl
+++ b/src/styles/site/_parallax.styl
@@ -14,6 +14,7 @@ $newsImageRatio = percentage(1/3)
     // height: 100vh
     overflow-x: hidden
     overflow-y: auto
+    -webkit-overflow-scrolling: touch
     +above(l)
       height 'calc(%s - %s)' % (100vh $top-menu-height-desktop)
 
