only do some transitions on larger than mobile

--- a/src/styles/inc/_media.styl
+++ b/src/styles/inc/_media.styl
@@ -60,12 +60,13 @@ figure.no-image
     transition transform 0.8s ease
     z-index 1
 
-.block--subpage
-.block--spotlight
-.block--news-events--preview
-  a:hover
-    figure.no-image:before
-      transform scale(1.08)
++above(m)
+  .block--subpage
+  .block--spotlight
+  .block--news-events--preview
+    a:hover
+      figure.no-image:before
+        transform scale(1.08)
 
 
 
