--- a/src/styles/modules/_block-spotlight.styl
+++ b/src/styles/modules/_block-spotlight.styl
@@ -81,8 +81,9 @@
       box-shadow $module-spotlight-box-shadow-hover
       > h3:after
         transform translateX(0.35em)
-      figure img
-        transform scale(1.08)
+      +above(m)
+        figure img
+          transform scale(1.08)
 
 
 #content
