--- a/src/styles/modules/_block-subpage.styl
+++ b/src/styles/modules/_block-subpage.styl
@@ -59,7 +59,8 @@
       color $module-subpages-link-hover-color
       &:after
         margin-left: 0.35em
-    figure img
-      transform scale(1.08)
+    +above(m)
+      figure img
+        transform scale(1.08)
 
 
