--- a/src/styles/mixins/_lazy-load.styl
+++ b/src/styles/mixins/_lazy-load.styl
@@ -2,8 +2,9 @@ $lazy-load
   filter blur(5px)
   transition filter 400ms
 
-.lazyload
-  @extend $lazy-load
++above(m)
+  .lazyload
+    @extend $lazy-load
 
-img.lazyloaded
-  filter blur(0)
+  img.lazyloaded
+    filter blur(0)
