--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -941,7 +941,7 @@ $directory-profile-name-size-desktop = rem(36px)
 $directory-profile-title-font = $serif
 $directory-profile-title-style = italic
 $directory-profile-title-color = $light-blue
-$directory-profile-title-size-mobile = $directory-profile-name-size-mobile
+$directory-profile-title-size-mobile = rem(28px)
 $directory-profile-title-size-desktop = $directory-profile-name-size-desktop
 
 $directory-profile-department-title-color = $navy
