--- a/src/styles/site/_directory.styl
+++ b/src/styles/site/_directory.styl
@@ -298,7 +298,7 @@
 #staff-profile
   color $navy
   line-height $line-height-base
-  padding rem(38px) rem(30px) 0
+  padding rem(38px) rem(30px) rem(40px)
   text-align center
   +above(m)
     padding-left 0
