--- a/src/styles/modules/_breadcrumb.styl
+++ b/src/styles/modules/_breadcrumb.styl
@@ -4,8 +4,6 @@
   list-style none
   width 100%
   display block
-  overflow-x scroll
-  overflow-y hidden
   background-color $bread-background-color
   font-family $bread-font-family
   font-size $bread-font-size-mobile
@@ -17,6 +15,8 @@
   max-height $breadcrumb-total-height-mobile
   white-space nowrap
   -webkit-overflow-scrolling touch
+  overflow-x scroll
+  overflow-y hidden
   
 
   +above(m)
@@ -28,6 +28,7 @@
     flex-wrap wrap
     width 100%
     white-space unset
+    overflow hidden
 
 
   li
