--- a/templates/singles/about/index.twig
+++ b/templates/singles/about/index.twig
@@ -7,6 +7,11 @@
 {% set title = entry.title %}
 {% set type = 'landing' %}
 
+{% if historyBlock.backgroundImage | length %}
+  {% set historyImage = entry.historyBlock.one().backgroundImage.one() %}
+  {%- set transformOptions = { width: 1600, quality: 82 } -%}
+  {% css %}#about--history--image { background-image: url({{ historyImage.getUrl(transformOptions) }}) }{% endcss %}
+{% endif %}
 
 {# HEADER IMAGE #}
 {% block parallaxBack %}
