--- a/src/styles/site/_homepage.styl
+++ b/src/styles/site/_homepage.styl
@@ -47,7 +47,9 @@
     > section
       background-color $snow
   #page--inner--columns
-    padding rem(74px) 0 0
+    padding 0
+    +above(m)
+      padding rem(74px) 0 0
     &.two
       padding-bottom rem(15px)
       +above(m)
