--- a/src/styles/modules/_header-text-only.styl
+++ b/src/styles/modules/_header-text-only.styl
@@ -6,3 +6,5 @@ main header
     font-style: $header-text-style
     font-weight: $header-text-weight
     line-height: $header-text-line-height
+  > p + h1
+    margin-top 0
