--- a/src/styles/modules/_side-menu.styl
+++ b/src/styles/modules/_side-menu.styl
@@ -51,6 +51,11 @@
   transition: transform 0.5s
   transform: translate3d(0, 0, 0)
 
+body.menu--open,
+body.menu--open #container,
+body.menu--open #page
+  height: 100%
+
 /* Fallback example for browsers that don't support 3D transforms (and no JS fallback) */
 .no-csstransforms3d #page,
 .no-js #page
