--- a/src/styles/site/_html.styl
+++ b/src/styles/site/_html.styl
@@ -7,10 +7,13 @@
 body
   font-family: $body-font-family
 
-html,
-body,
-#container,
-#page
+// html,
+// body,
+// #container,
+// #page
+//   height: 100%
+
+html
   height: 100%
 
 #container
