share story button link

--- a/templates/modules/content/_block-story-share.twig
+++ b/templates/modules/content/_block-story-share.twig
@@ -1,5 +1,5 @@
 <section class="block--story-share">
   <span><strong>City of Champions</strong></span>
   <p>Know a Champion in our community?</p>
-  <a href="#" title="Share a story of a champion">Share their story</a>
+  <a href="/share-a-story" title="Share a story of a champion">Share their story</a>
 </section>
