--- a/src/styles/site/_content.styl
+++ b/src/styles/site/_content.styl
@@ -30,7 +30,7 @@
     font-weight: $content-link-weight
     text-decoration: $content-link-decoration
     transition: $link-transition, text-decoration $transition-timing
-    white-space: nowrap
+    white-space: pre-line
     &:active
     &:focus
     &:link
