Closes #127 for real

--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -671,8 +671,8 @@ $module-location-subheadline-size-mobile = rem(14px)
 $module-location-subheadline-size-desktop = rem(14px)
 
 $module-location-text-color = $navy
-$module-location-text-size-mobile = rem(21px)
-$module-location-text-size-desktop = rem(18px)
+$module-location-text-size-mobile = rem(18px)
+$module-location-text-size-desktop = $module-location-text-size-mobile
 
 
 // ------------------------------------------------------
