swapping repeating svg for png temporarily
#140

--- a/src/styles/inc/_media.styl
+++ b/src/styles/inc/_media.styl
@@ -55,7 +55,7 @@ figure.no-image
     left 0
     bottom 0
     right 0
-    background embedurl("../images/logo-mark-repeating.svg", "utf8") repeat
+    background embedurl("../images/logo-mark-repeating@4x.png") repeat
     background-size 30%
     transition transform 0.8s ease
     z-index 1
