--- a/templates/layouts/base/_core.twig
+++ b/templates/layouts/base/_core.twig
@@ -70,7 +70,8 @@
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#033762">
   <meta name="theme-color" content="#ffffff">
 
-  {% set fonts = '//fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i|Noto+Serif:400,400i,700,700i|Source+Sans+Pro:400,400i,600,600i,700,700i' %}
+{% set fonts = '//fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i|Noto+Serif:400,400i,700,700i|Source+Sans+Pro:400,400i,600,600i,700,700i' %}
+<link rel="stylesheet" href="{{ fonts }}" async>
 
 {# Base #}
 {% if craft.app.config.general.craftEnv == 'local' %}
