--- a/templates/layouts/base/_core.twig
+++ b/templates/layouts/base/_core.twig
@@ -71,13 +71,11 @@
   <meta name="theme-color" content="#ffffff">
 
 {% set fonts = '//fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i|Noto+Serif:400,400i,700,700i|Source+Sans+Pro:400,400i,600,600i,700,700i' %}
-
+<link rel="stylesheet" href="{{ fonts }}">
 
 {# Base #}
 {% if craft.app.config.general.craftEnv == 'local' %}
   <link rel="stylesheet" href="/assets/css/site.combined.min.css">
-  <link rel="preload" href="{{ fonts }}" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="{{ fonts }}"></noscript>
 {% else %}
   <link rel="stylesheet" href="{{ craft.stamp.er('/assets/css/site.combined.min.css') }}">
 {% endif %}
