--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -384,7 +384,7 @@ $button-text-color = $white
 $button-font = $sans-serif-headline
 $button-font-size = rem(14px)
 $button-font-weight = $font-weight.bold
-$button-line-height = $line-height-solid
+$button-line-height = $line-height-title
 $button-transform = uppercase
 $button-padding = rem(28.5px)
 $button-hover-background = $medium-blue
