--- a/src/styles/site/_layout-columns.styl
+++ b/src/styles/site/_layout-columns.styl
@@ -42,6 +42,8 @@
       +between(m, l)
         lost-column 12/36
         lost-offset: 1/36
+      +above(m)
+        z-index 1
       +above(xl)
         lost-column 10/36
         lost-offset: 4/36
@@ -51,14 +53,14 @@
   .page-section--homepage
     aside
       margin-top -(rem(170px))
-  
+
   .page-type--standard.has--header-image
     aside
       margin-top -(rem(144px))
-  
+
   .page-type--landing #page--inner--columns
     padding-bottom 0
-  
+
   .page-section--newsEvents.has--header-image
     aside
       margin-top -(rem(80px))
