--- a/src/styles/site/_content.styl
+++ b/src/styles/site/_content.styl
@@ -30,7 +30,7 @@
     font-weight: $content-link-weight
     text-decoration: $content-link-decoration
     transition: $link-transition, text-decoration $transition-timing
-    white-space: pre-line
+    white-space: unset
     &:active
     &:focus
     &:link
@@ -105,7 +105,7 @@
       white-space pre-wrap
       background-color transparent
       border-radius 0
-  
+
   hr
     margin 3em 0
 
