--- a/templates/modules/content/_block-home-featured-video.twig
+++ b/templates/modules/content/_block-home-featured-video.twig
@@ -19,7 +19,7 @@
         <h2>{{ videoBlock.headline | nl2br | typogrify }}</h2>
         {% if videoBlock.subHeadline %}<h3>{{ videoBlock.subHeadline | nl2br | typogrify }}</h3>{% endif %}
       </div>
-      <a id="block--featured-video--play" data-fancybox href="{{ video.url }}" data-options='{"toolbar" : false, "smallBtn" : true}' title="Play Video"><span>Play Video</span></a>
+      <a id="block--featured-video--play" data-fancybox href="{{ video }}" data-options='{"toolbar" : false, "smallBtn" : true}' title="Play Video"><span>Play Video</span></a>
     </div>
     {% endif %}
 
