comment out events on the homepage for now

--- a/templates/modules/content/_block-news-events-home.twig
+++ b/templates/modules/content/_block-news-events-home.twig
@@ -3,7 +3,7 @@
   {% set recentNews = craft.entries({
       'section' : 'newsEvents',
       'type' : 'and, not event, not story',
-      'limit' : 3
+      'limit' : 6
   }).all() %}
   {% for entry in recentNews %}
     {% include 'modules/nav/_block-news-events-entry' %}
@@ -16,8 +16,8 @@
 </section>
 
 
-<section id="block--events-home" class="block--news-events-home">
-  <h2>Events</h2>
+{# <section id="block--events-home" class="block--news-events-home">
+  <h2>Events</h2> #}
   {# {% set upcomingEvents = craft.entries({
       'section' : 'newsEvents',
       'type' : 'event',
@@ -28,7 +28,7 @@
         now|date('Y-m-d')
       ]
   }) %} #}
-  {% set upcomingEvents = craft.entries({
+{#   {% set upcomingEvents = craft.entries({
       'section' : 'newsEvents',
       'type' : 'event',
       'limit' : 3
@@ -41,4 +41,4 @@
   <a href="{{ singleSectionEntry.url }}" title="View all upcoming events">
     View All
   </a>
-</section>
+</section> #}
