incorrect css syntax

--- a/src/styles/modules/_header-image-block.styl
+++ b/src/styles/modules/_header-image-block.styl
@@ -37,7 +37,7 @@
   +above(m)
     figure.mobile
       display none
-      visibility none
+      visibility hidden
     figure.desktop
       display block
       visibility visible
