--- a/src/styles/site/_directory.styl
+++ b/src/styles/site/_directory.styl
@@ -353,14 +353,14 @@
     height: auto
     line-height: 0
     border 10px solid $white
-    
+
     &.desktop
       display none
       visibility hidden
     +above(m)
       &.mobile
         display none
-        visibility none
+        visibility hidden
       &.desktop
         display block
         visibility visible
