--- a/src/styles/modules/_block-home-featured-video.styl
+++ b/src/styles/modules/_block-home-featured-video.styl
@@ -25,7 +25,7 @@
   +above(desktop-min)
     figure.mobile
       display none
-      visibility none
+      visibility hidden
     figure.desktop
       display block
       visibility visible
@@ -76,7 +76,7 @@
       line-height 1.1666666667
       margin rem(22px) 0 0
       display none
-      visibility none
+      visibility hidden
       +above(l)
         display block
         visibility visible
