--- a/src/styles/modules/_block-news-events-preview.styl
+++ b/src/styles/modules/_block-news-events-preview.styl
@@ -25,7 +25,7 @@
       +above(m)
         &.mobile
           display none
-          visibility none
+          visibility hidden
         &.desktop
           display block
           visibility visible
