--- a/src/styles/modules/_block-spotlight.styl
+++ b/src/styles/modules/_block-spotlight.styl
@@ -24,7 +24,7 @@
       +above(m)
         &.mobile
           display none
-          visibility none
+          visibility hidden
         &.desktop
           display block
           visibility visible
