--- a/src/styles/modules/_block-subpage.styl
+++ b/src/styles/modules/_block-subpage.styl
@@ -26,7 +26,7 @@
       +above(m)
         &.mobile
           display none
-          visibility none
+          visibility hidden
         &.desktop
           display block
           visibility visible
