fix incorrect css

--- a/src/styles/modules/_block-staff-member.styl
+++ b/src/styles/modules/_block-staff-member.styl
@@ -32,7 +32,7 @@
       +above(m)
         &.mobile
           display none
-          visibility none
+          visibility hidden
         &.desktop
           display block
           visibility visible
