--- a/templates/layouts/base/_core.twig
+++ b/templates/layouts/base/_core.twig
@@ -82,7 +82,7 @@
   {% do view.registerJsFile('/assets/js/site.combined.min.js', {defer: ''}) %}
 {% else %}
   {% do view.registerJsFile(craft.stamp.er('/assets/js/site.combined.min.js'), {defer: ''}) %}
-  {% do view.registerJsFile('https://www.googletagmanager.com/gtag/js?id=UA-111364147-1', {defer: ''}) %}
+  {# {% do view.registerJsFile('https://www.googletagmanager.com/gtag/js?id=UA-111364147-1', {defer: ''}) %}
   {% js %}
   if(!(navigator.doNotTrack == "1" || window.doNotTrack == "1")) {
     window.dataLayer = window.dataLayer || [];
@@ -90,7 +90,7 @@
     gtag('js', new Date());
     gtag('config', 'UA-111364147-1');
   }
-  {% endjs %}
+  {% endjs %} #}
 
 {% endif %}
 
