--- a/templates/structure/departments/_sub.twig
+++ b/templates/structure/departments/_sub.twig
@@ -21,8 +21,8 @@
 {% block main %}
 {% cache using key 'departments_subpage_main_' ~ craft.app.request.pathInfo %}
     <header>
-    <h1>{{ entry.title | typogrify }}</h1>
-    <p class="lead">{{ entry.leadIn | typogrify }}</p>
+      <h1>{% if entry.headline %}{{ entry.headline | typogrify }}{% else %}{{ entry.title | typogrify }}{% endif %}</h1>
+      {% if entry.leadIn %}<p class="lead">{{ entry.leadIn | typogrify }}</p>{% endif %}
     </header>
 
     {% include "modules/content/_page-content" %}
